kubernetes/auth-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db-deployment
spec:
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
      - name: auth-db
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: auth-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-service # Nombre clave para la conexión del microservicio
spec:
  selector:
    app: auth-db
  ports:
  - port: 5432
    targetPort: 5432
