kubernetes/auth-service.yaml
# 1. Deployment:
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth-service
        image: juanferpg/auth-service:latest
        ports:
        - containerPort: 8000 # <-- ¡CORREGIDO!
---
# 2. Service:
apiVersion: v1
kind: Service
metadata:
  name: auth-service-internal
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000 # <-- ¡CORREGIDO! Apuntando al puerto WSGI de Django
